# firelite

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/firelite/: Cargo.toml
crates/firelite/src/: auth.rs  config.rs  control.rs  functions.rs  functions_worker.cjs  lib.rs  main.rs  pubsub.rs  server.rs  storage.rs  tasks.rs  web_ui.rs
crates/firelite/tests/: auth_contract.rs  management_console.rs  pubsub_contract.rs  storage_contract.rs  tasks_contract.rs
docs/: architecture.md  auth-emulator-api-surface.md  compatibility-matrix.md
fixtures/auth/: basic-password-flow.json  official-phone-mfa-flow.json  official-recaptcha-discovery.json
harness/: README.md  package-lock.json  package.json
harness/src/: discover-auth.mjs  test-auth-admin-sdk.mjs  test-auth-sdk.mjs  test-google-cloud-storage-sdk.mjs  test-pubsub-sdk.mjs  test-storage-sdk.mjs
scripts/: release.sh
