[workspace]
members = ["crates/firelite"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
http = "1.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time", "net"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
