[package]
name = "firelite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "firelite"
path = "src/main.rs"
test = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
