[package]
name = "firelite"
version = "0.2.1"
description = "A lightweight Firebase Emulator Suite-compatible local emulator for focused development workflows."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "../../README.md"
repository = "https://github.com/loukotal/firelite"
homepage = "https://github.com/loukotal/firelite"
documentation = "https://github.com/loukotal/firelite"
keywords = ["firebase", "emulator", "auth", "storage", "functions"]
categories = ["command-line-utilities", "development-tools::testing"]
exclude = [
    "tests/fixtures/**",
]

[[bin]]
name = "firelite"
path = "src/main.rs"
test = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
